2008-06-22  Robert Blaut  <webkit@blaut.biz>

Reviewed by Darin Adler.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=17421
        Bug 17421: Lack of end tag for SELECT element causes the rest of page to not be rendered

        Test: fast/parser/input-textarea-inside-select-element.html

        * html/HTMLParser.cpp:
        (WebCore::HTMLParser::handleError):


Canonical link: https://commits.webkit.org/27182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34734 268f45cc-cd09-0410-ab3c-d52691b4dbfc